grammar/.antlr/gramatica_v4Parser.java
// Generated from /home/sergio/Compiladores/grammar/gramatica_v4.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class gramatica_v4Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, PROGRAMA=2, SI=3, SINO=4, IMPRIMIR=5, MIENTRAS=6, PARA=7, FUNCION=8, 
		RETORNA=9, VOID=10, TIPO_ENTERO=11, TIPO_BOOL=12, TIPO_FLOTANTE=13, TIPO_CADENA=14, 
		VERDADERO=15, FALSO=16, ROMPER=17, CONTINUAR=18, IMPORTAR=19, STRUCT=20, 
		SWITCH=21, CASE=22, DEFAULT=23, Y_LOGICO=24, O_LOGICO=25, NEGACION=26, 
		IGUAL=27, DIFERENTE=28, MENOR_IGUAL=29, MAYOR_IGUAL=30, MENOR_QUE=31, 
		MAYOR_QUE=32, ASIGNACION=33, SUMA=34, RESTA=35, MULTIPLICACION=36, DIVISION=37, 
		MODULO=38, PAREN_IZQ=39, PAREN_DER=40, LLAVE_IZQ=41, LLAVE_DER=42, CORCHETE_IZQ=43, 
		CORCHETE_DER=44, PUNTO_COMA=45, COMA=46, PUNTO=47, DOS_PUNTOS=48, FLOTANTE=49, 
		ENTERO=50, CADENA=51, IDENTIFICADOR=52, ESPACIO=53, COMENTARIO_LINEA=54, 
		COMENTARIO_BLOQUE=55;
	public static final int
		RULE_programa = 0, RULE_funcionDeclaracion = 1, RULE_parametros = 2, RULE_parametro = 3, 
		RULE_bloque = 4, RULE_sentencia = 5, RULE_declaracionVariable = 6, RULE_literalArreglo = 7, 
		RULE_literalStruct = 8, RULE_accesoArreglo = 9, RULE_asignacionArreglo = 10, 
		RULE_tipo = 11, RULE_tipoStruct = 12, RULE_asignacion = 13, RULE_condicionalSi = 14, 
		RULE_impresion = 15, RULE_llamadaFuncion = 16, RULE_inicializacionPara = 17, 
		RULE_asignacionPara = 18, RULE_actualizacionPara = 19, RULE_cicloMientras = 20, 
		RULE_cicloPara = 21, RULE_sentenciaRetorna = 22, RULE_sentenciaBreak = 23, 
		RULE_sentenciaContinue = 24, RULE_sentenciaImportar = 25, RULE_sentenciaSwitch = 26, 
		RULE_caso = 27, RULE_casoDefault = 28, RULE_sentenciaStruct = 29, RULE_declaracionCampoStruct = 30, 
		RULE_accesoStruct = 31, RULE_expresion = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "funcionDeclaracion", "parametros", "parametro", "bloque", 
			"sentencia", "declaracionVariable", "literalArreglo", "literalStruct", 
			"accesoArreglo", "asignacionArreglo", "tipo", "tipoStruct", "asignacion", 
			"condicionalSi", "impresion", "llamadaFuncion", "inicializacionPara", 
			"asignacionPara", "actualizacionPara", "cicloMientras", "cicloPara", 
			"sentenciaRetorna", "sentenciaBreak", "sentenciaContinue", "sentenciaImportar", 
			"sentenciaSwitch", "caso", "casoDefault", "sentenciaStruct", "declaracionCampoStruct", 
			"accesoStruct", "expresion"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'?'", "'programa'", "'si'", "'sino'", "'imprimir'", "'mientras'", 
			"'para'", "'funcion'", "'retorna'", "'vacio'", "'entero'", "'booleano'", 
			"'flotante'", "'cadena'", "'verdadero'", "'falso'", "'romper'", "'continuar'", 
			"'importar'", "'struct'", "'switch'", "'case'", "'default'", "'&&'", 
			"'||'", "'!'", "'=='", null, "'<='", "'>='", "'<'", "'>'", "'='", "'+'", 
			"'-'", "'*'", "'/'", "'%'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
			"';'", "','", "'.'", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "PROGRAMA", "SI", "SINO", "IMPRIMIR", "MIENTRAS", "PARA", 
			"FUNCION", "RETORNA", "VOID", "TIPO_ENTERO", "TIPO_BOOL", "TIPO_FLOTANTE", 
			"TIPO_CADENA", "VERDADERO", "FALSO", "ROMPER", "CONTINUAR", "IMPORTAR", 
			"STRUCT", "SWITCH", "CASE", "DEFAULT", "Y_LOGICO", "O_LOGICO", "NEGACION", 
			"IGUAL", "DIFERENTE", "MENOR_IGUAL", "MAYOR_IGUAL", "MENOR_QUE", "MAYOR_QUE", 
			"ASIGNACION", "SUMA", "RESTA", "MULTIPLICACION", "DIVISION", "MODULO", 
			"PAREN_IZQ", "PAREN_DER", "LLAVE_IZQ", "LLAVE_DER", "CORCHETE_IZQ", "CORCHETE_DER", 
			"PUNTO_COMA", "COMA", "PUNTO", "DOS_PUNTOS", "FLOTANTE", "ENTERO", "CADENA", 
			"IDENTIFICADOR", "ESPACIO", "COMENTARIO_LINEA", "COMENTARIO_BLOQUE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gramatica_v4.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public gramatica_v4Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode PROGRAMA() { return getToken(gramatica_v4Parser.PROGRAMA, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public TerminalNode EOF() { return getToken(gramatica_v4Parser.EOF, 0); }
		public List<FuncionDeclaracionContext> funcionDeclaracion() {
			return getRuleContexts(FuncionDeclaracionContext.class);
		}
		public FuncionDeclaracionContext funcionDeclaracion(int i) {
			return getRuleContext(FuncionDeclaracionContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNCION) {
				{
				{
				setState(66);
				funcionDeclaracion();
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(72);
			match(PROGRAMA);
			setState(73);
			bloque();
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNCION) {
				{
				{
				setState(74);
				funcionDeclaracion();
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(80);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncionDeclaracionContext extends ParserRuleContext {
		public TerminalNode FUNCION() { return getToken(gramatica_v4Parser.FUNCION, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(gramatica_v4Parser.IDENTIFICADOR, 0); }
		public TerminalNode PAREN_IZQ() { return getToken(gramatica_v4Parser.PAREN_IZQ, 0); }
		public TerminalNode PAREN_DER() { return getToken(gramatica_v4Parser.PAREN_DER, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode VOID() { return getToken(gramatica_v4Parser.VOID, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public FuncionDeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcionDeclaracion; }
	}

	public final FuncionDeclaracionContext funcionDeclaracion() throws RecognitionException {
		FuncionDeclaracionContext _localctx = new FuncionDeclaracionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_funcionDeclaracion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(FUNCION);
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TIPO_ENTERO:
			case TIPO_BOOL:
			case TIPO_FLOTANTE:
			case TIPO_CADENA:
				{
				setState(83);
				tipo();
				}
				break;
			case VOID:
				{
				setState(84);
				match(VOID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(87);
			match(IDENTIFICADOR);
			setState(88);
			match(PAREN_IZQ);
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 30720L) != 0)) {
				{
				setState(89);
				parametros();
				}
			}

			setState(92);
			match(PAREN_DER);
			setState(93);
			bloque();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametrosContext extends ParserRuleContext {
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public List<TerminalNode> COMA() { return getTokens(gramatica_v4Parser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(gramatica_v4Parser.COMA, i);
		}
		public ParametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametros; }
	}

	public final ParametrosContext parametros() throws RecognitionException {
		ParametrosContext _localctx = new ParametrosContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_parametros);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			parametro();
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(96);
				match(COMA);
				setState(97);
				parametro();
				}
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametroContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode IDENTIFICADOR() { return getToken(gramatica_v4Parser.IDENTIFICADOR, 0); }
		public ParametroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametro; }
	}

	public final ParametroContext parametro() throws RecognitionException {
		ParametroContext _localctx = new ParametroContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_parametro);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			tipo();
			setState(104);
			match(IDENTIFICADOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BloqueContext extends ParserRuleContext {
		public TerminalNode LLAVE_IZQ() { return getToken(gramatica_v4Parser.LLAVE_IZQ, 0); }
		public TerminalNode LLAVE_DER() { return getToken(gramatica_v4Parser.LLAVE_DER, 0); }
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public BloqueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque; }
	}

	public final BloqueContext bloque() throws RecognitionException {
		BloqueContext _localctx = new BloqueContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_bloque);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(LLAVE_IZQ);
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4503599631465192L) != 0)) {
				{
				{
				setState(107);
				sentencia();
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(113);
			match(LLAVE_DER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaContext extends ParserRuleContext {
		public DeclaracionVariableContext declaracionVariable() {
			return getRuleContext(DeclaracionVariableContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public AsignacionArregloContext asignacionArreglo() {
			return getRuleContext(AsignacionArregloContext.class,0);
		}
		public CondicionalSiContext condicionalSi() {
			return getRuleContext(CondicionalSiContext.class,0);
		}
		public ImpresionContext impresion() {
			return getRuleContext(ImpresionContext.class,0);
		}
		public CicloMientrasContext cicloMientras() {
			return getRuleContext(CicloMientrasContext.class,0);
		}
		public CicloParaContext cicloPara() {
			return getRuleContext(CicloParaContext.class,0);
		}
		public SentenciaRetornaContext sentenciaRetorna() {
			return getRuleContext(SentenciaRetornaContext.class,0);
		}
		public LlamadaFuncionContext llamadaFuncion() {
			return getRuleContext(LlamadaFuncionContext.class,0);
		}
		public SentenciaBreakContext sentenciaBreak() {
			return getRuleContext(SentenciaBreakContext.class,0);
		}
		public SentenciaContinueContext sentenciaContinue() {
			return getRuleContext(SentenciaContinueContext.class,0);
		}
		public SentenciaImportarContext sentenciaImportar() {
			return getRuleContext(SentenciaImportarContext.class,0);
		}
		public SentenciaSwitchContext sentenciaSwitch() {
			return getRuleContext(SentenciaSwitchContext.class,0);
		}
		public SentenciaStructContext sentenciaStruct() {
			return getRuleContext(SentenciaStructContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_sentencia);
		try {
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				declaracionVariable();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(116);
				asignacion();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(117);
				asignacionArreglo();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(118);
				condicionalSi();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(119);
				impresion();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(120);
				cicloMientras();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(121);
				cicloPara();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(122);
				sentenciaRetorna();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(123);
				llamadaFuncion();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(124);
				sentenciaBreak();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(125);
				sentenciaContinue();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(126);
				sentenciaImportar();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(127);
				sentenciaSwitch();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(128);
				sentenciaStruct();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionVariableContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode IDENTIFICADOR() { return getToken(gramatica_v4Parser.IDENTIFICADOR, 0); }
		public TerminalNode PUNTO_COMA() { return getToken(gramatica_v4Parser.PUNTO_COMA, 0); }
		public TerminalNode ASIGNACION() { return getToken(gramatica_v4Parser.ASIGNACION, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode CORCHETE_IZQ() { return getToken(gramatica_v4Parser.CORCHETE_IZQ, 0); }
		public TerminalNode CORCHETE_DER() { return getToken(gramatica_v4Parser.CORCHETE_DER, 0); }
		public LiteralArregloContext literalArreglo() {
			return getRuleContext(LiteralArregloContext.class,0);
		}
		public TipoStructContext tipoStruct() {
			return getRuleContext(TipoStructContext.class,0);
		}
		public LiteralStructContext literalStruct() {
			return getRuleContext(LiteralStructContext.class,0);
		}
		public DeclaracionVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracionVariable; }
	}

	public final DeclaracionVariableContext declaracionVariable() throws RecognitionException {
		DeclaracionVariableContext _localctx = new DeclaracionVariableContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declaracionVariable);
		int _la;
		try {
			setState(157);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(131);
				tipo();
				setState(132);
				match(IDENTIFICADOR);
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ASIGNACION) {
					{
					setState(133);
					match(ASIGNACION);
					setState(134);
					expresion(0);
					}
				}

				setState(137);
				match(PUNTO_COMA);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(139);
				tipo();
				setState(140);
				match(CORCHETE_IZQ);
				setState(141);
				match(CORCHETE_DER);
				setState(142);
				match(IDENTIFICADOR);
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ASIGNACION) {
					{
					setState(143);
					match(ASIGNACION);
					setState(144);
					literalArreglo();
					}
				}

				setState(147);
				match(PUNTO_COMA);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(149);
				tipoStruct();
				setState(150);
				match(IDENTIFICADOR);
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ASIGNACION) {
					{
					setState(151);
					match(ASIGNACION);
					setState(152);
					literalStruct();
					}
				}

				setState(155);
				match(PUNTO_COMA);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LiteralArregloContext extends ParserRuleContext {
		public TerminalNode CORCHETE_IZQ() { return getToken(gramatica_v4Parser.CORCHETE_IZQ, 0); }
		public TerminalNode CORCHETE_DER() { return getToken(gramatica_v4Parser.CORCHETE_DER, 0); }
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public List<TerminalNode> COMA() { return getTokens(gramatica_v4Parser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(gramatica_v4Parser.COMA, i);
		}
		public LiteralArregloContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literalArreglo; }
	}

	public final LiteralArregloContext literalArreglo() throws RecognitionException {
		LiteralArregloContext _localctx = new LiteralArregloContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_literalArreglo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(CORCHETE_IZQ);
			setState(168);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8444833484079104L) != 0)) {
				{
				setState(160);
				expresion(0);
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMA) {
					{
					{
					setState(161);
					match(COMA);
					setState(162);
					expresion(0);
					}
					}
					setState(167);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(170);
			match(CORCHETE_DER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LiteralStructContext extends ParserRuleContext {
		public TerminalNode LLAVE_IZQ() { return getToken(gramatica_v4Parser.LLAVE_IZQ, 0); }
		public TerminalNode LLAVE_DER() { return getToken(gramatica_v4Parser.LLAVE_DER, 0); }
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public List<TerminalNode> COMA() { return getTokens(gramatica_v4Parser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(gramatica_v4Parser.COMA, i);
		}
		public LiteralStructContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literalStruct; }
	}
